force-app/main/default/objects/Application_Error__c/Application_Error__c.object-meta.xml
<CustomObject>
    <description>Sanitized operational failures for retries and support dashboards.</description>
    <label>Application Error</label>
    <nameField>
        <displayFormat>ERR-{000000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Errors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>