force-app/main/default/objects/Application_Error__c/fields/AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Bounded retry attempt counter.</description>
    <label>Attempt Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>