force-app/main/default/objects/Application_Error__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Controlled triage category.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Integration Transient</fullName>
            </value>
            <value>
                <fullName>Integration Permanent</fullName>
            </value>
            <value>
                <fullName>Flow Fault</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>