force-app/main/default/objects/Application_Error__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Shared request/transaction identifier.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>