force-app/main/default/objects/Application_Error__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related customer when needed for investigation.</description>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Application Errors</relationshipLabel>
    <relationshipName>Application_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>