force-app/main/default/objects/Application_Error__c/fields/IsRetryable__c.field-meta.xml
<CustomField>
    <fullName>IsRetryable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the failure is eligible for automated retry.</description>
    <label>Retryable</label>
    <type>Checkbox</type>
</CustomField>