force-app/main/default/objects/Application_Error__c/fields/LoanRequest__c.field-meta.xml
<CustomField>
    <fullName>LoanRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related loan when known.</description>
    <label>Loan Request</label>
    <referenceTo>LoanRequest__c</referenceTo>
    <relationshipLabel>Application Errors</relationshipLabel>
    <relationshipName>Application_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>