force-app/main/default/objects/Application_Error__c/fields/NextRetryAt__c.field-meta.xml
<CustomField>
    <fullName>NextRetryAt__c</fullName>
    <description>Scheduled retry time. Required when retry is scheduled.</description>
    <label>Next Retry At</label>
    <type>DateTime</type>
</CustomField>