force-app/main/default/objects/Application_Error__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>Failure time.</description>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>