force-app/main/default/objects/Application_Error__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Sanitized operation name within the source component.</description>
    <label>Operation</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>