force-app/main/default/objects/Application_Error__c/fields/ResolutionStatus__c.field-meta.xml
<CustomField>
    <fullName>ResolutionStatus__c</fullName>
    <description>Operational resolution lifecycle.</description>
    <label>Resolution Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Retry Scheduled</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>