force-app/main/default/objects/Application_Error__c/fields/ResolvedAt__c.field-meta.xml
<CustomField>
    <fullName>ResolvedAt__c</fullName>
    <description>Resolution timestamp. Required when Resolved.</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>