force-app/main/default/objects/Application_Error__c/fields/SanitizedMessage__c.field-meta.xml
<CustomField>
    <fullName>SanitizedMessage__c</fullName>
    <description>Support context without secrets, PII, or raw payloads.</description>
    <label>Sanitized Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>