force-app/main/default/objects/Application_Error__c/fields/SourceComponent__c.field-meta.xml
<CustomField>
    <fullName>SourceComponent__c</fullName>
    <description>Component, Flow, service, or endpoint name.</description>
    <label>Source Component</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>