force-app/main/default/objects/Application_Error__c/fields/StackFingerprint__c.field-meta.xml
<CustomField>
    <fullName>StackFingerprint__c</fullName>
    <description>Stable hash/signature for grouping equivalent failures.</description>
    <label>Stack Fingerprint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>