force-app/main/default/objects/Application_Error__c/validationRules/Attempt_Count_Nonnegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Attempt_Count_Nonnegative</fullName>
    <active>true</active>
    <description>Attempt count must be zero or greater.</description>
    <errorConditionFormula>OR(
  ISBLANK(AttemptCount__c),
  AttemptCount__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>AttemptCount__c</errorDisplayField>
    <errorMessage>Attempt count must be zero or greater.</errorMessage>
</ValidationRule>