force-app/main/default/objects/Application_Error__c/validationRules/Retry_State_Consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Retry_State_Consistency</fullName>
    <active>true</active>
    <description>Retry Scheduled requires retryable=true and NextRetryAt; non-retryable cannot be Retry Scheduled.</description>
    <errorConditionFormula>OR(
  AND(
    TEXT(ResolutionStatus__c) = &quot;Retry Scheduled&quot;,
    OR(
      NOT(IsRetryable__c),
      ISBLANK(NextRetryAt__c)
    )
  ),
  AND(
    IsRetryable__c,
    TEXT(ResolutionStatus__c) = &quot;Retry Scheduled&quot;,
    ISBLANK(NextRetryAt__c)
  )
)</errorConditionFormula>
    <errorMessage>Retry Scheduled errors must be retryable and include Next Retry At.</errorMessage>
</ValidationRule>