force-app/main/default/objects/Application_Error__c/validationRules/Sanitized_Message_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanitized_Message_Required</fullName>
    <active>true</active>
    <description>Long text cannot be database-required; enforce presence via validation.</description>
    <errorConditionFormula>ISBLANK(SanitizedMessage__c)</errorConditionFormula>
    <errorDisplayField>SanitizedMessage__c</errorDisplayField>
    <errorMessage>A sanitized message is required.</errorMessage>
</ValidationRule>