force-app/main/default/objects/Application_Error__c/listViews/Open_Application_Errors.listView-meta.xml
<ListView>
    <fullName>Open_Application_Errors</fullName>
    <columns>NAME</columns>
    <columns>SourceComponent__c</columns>
    <columns>Operation__c</columns>
    <columns>Category__c</columns>
    <columns>ResolutionStatus__c</columns>
    <columns>OccurredAt__c</columns>
    <columns>LoanRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ResolutionStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Application Errors</label>
</ListView>